# filters-pydantic

./: .gitignore  .readthedocs.yaml  LICENCE.txt  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yml
docs/: Makefile  api.rst  conf.py  index.rst
test/: test_placeholder.py
