[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phx-filters-pydantic"
version = "0.1.0"
description = "Pydantic integration for Filters"
authors = [{ name = "Phoenix Zerin", email = "phx@phx.nz" }]
requires-python = "~=3.12"
readme = "README.rst"
license = "MIT"
keywords = []
classifiers = []

[project.urls]
Repository = "https://github.com/todofixthis/filters-pydantic"
Documentation = "https://phx-filters-pydantic.readthedocs.io/"
Changelog = "https://github.com/todofixthis/filters-pydantic/releases"
Issues = "https://github.com/todofixthis/filters-pydantic/issues"

[dependency-groups]
dev = [
    "autohooks>=25,<26",
    "autohooks-plugin-black>=23,<24",
    "autohooks-plugin-mypy>=23,<24",
    "autohooks-plugin-pytest>=23,<24",
    "autohooks-plugin-ruff>=25,<26",
    "black>=25,<26",
    "hatchling>=1.27.0,<2",
    "mypy>=1,<2",
    "pytest>=9,<10",
    "sphinx>=9,<10",
    "sphinx_rtd_theme>=3,<4",
    "tox>=4,<5",
    "tox-uv>=1.25.0,<2",
]
ci = [
    "mypy>=1,<2",
    "pytest>=9,<10",
    "sphinx>=9,<10",
    "sphinx_rtd_theme>=3,<4",
]

# :see: https://greenbone.github.io/autohooks/installation.html
[tool.autohooks]
mode = "pythonpath"
pre-commit = [
    "autohooks.plugins.black",
    "autohooks.plugins.ruff",
    "autohooks.plugins.mypy",
    "autohooks.plugins.pytest"
]

[tool.uv]
default-groups = [
    "dev",
    "ci",
]

[tool.mypy]
strict = true

[tool.hatch.build.targets.sdist]
include = [
    "src/filters_pydantic",
    "LICENCE.txt",
    "docs",
    "test",
]
exclude = ["docs/_build"]

[tool.hatch.build.targets.wheel]
include = ["src/filters_pydantic"]
exclude = ["docs/_build"]

[tool.hatch.build.targets.wheel.sources]
"src/filters_pydantic" = "filters_pydantic"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.tox]
env_list = ["py313", "py312"]

[tool.tox.env_run_base]
commands = [
    ["pytest"],
    ["mypy", "src", "test"]
]
runner = "uv-venv-lock-runner"
